Added some performance enhancements, by using [Integer|Boolean|Long].valueOf() instead of new [Integer|Boolean|Long].